[tool.poetry]
name = "theseptatimes"
version = "0.2.1"
description = "A Python package to get data from the Septa API"
authors = ["ZenithDS"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
requests = "^2.27.1"
fuzzywuzzy = "^0.18.0"
colorama = "^0.4.4"
DateTime = "^4.4"
python-Levenshtein = "^0.12.2"
typer = "^0.4.0"

[tool.poetry.scripts]
tst = "theseptatimes.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
