[tool.poetry]
name = "theseptatimes"
version = "0.2.3"
description = "A Python package to get data from the Septa API"
authors = ["dotzenith"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
colorama = "^0.4.6"
DateTime = "^5.0"
typer = "^0.7.0"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}

[tool.poetry.scripts]
tst = "TheSeptaTimes.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
